# solana_substream_decode_example

./: .gitignore  Cargo.toml  Makefile  README.md  substreams.yaml
proto/: messages.proto  program.proto
src/: lib.rs
src/idl/: message_transmitter.rs  mod.rs
src/modules/: 001_map_events.rs  mod.rs
src/pb/: messages.v1.rs  mod.rs  program.v1.rs  sf.solana.transactions.v1.rs
