[package]
name = "circle_cctp_solana"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-program-instructions = "0.1"
substreams-database-change = "1"
substreams-entity-change = "1"
prost = "0.11"
prost-types = "0.11"
message-transmitter = { git = "https://github.com/circlefin/solana-cctp-contracts", branch = "master" } # Imported IDL
anchor-lang = { version = "=0.28.0", features = ["init-if-needed", "event-cpi"] } # Needed to call DISCRIMINATOR



[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
